Fix the input event handler on mobile

--- a/packages/squa-doc-js/src/components/Editor.scss
+++ b/packages/squa-doc-js/src/components/Editor.scss
@@ -171,6 +171,13 @@
     }
   }
 
+  // Code
+
+  pre {
+    white-space: pre-wrap;
+    word-wrap: break-word;
+  }
+
   // Alignment
 
   .SquaDocJs-align-left {
