--- a/website/src/styles/editor.scss
+++ b/website/src/styles/editor.scss
@@ -1,5 +1,5 @@
 .SquaDocJs-editor {
-  width: 900px;
+  max-width: 900px;
   margin: 10px;
   padding: 10px;
   font-family: sans-sans-serif;
